[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/player/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/player_camera.gd" type="Script" id=2]
[ext_resource path="res://scenes/player.gd" type="Script" id=3]
[ext_resource path="res://assets/player/phase.png" type="Texture" id=4]
[ext_resource path="res://scenes/shockwave.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
loop = true
step = 0.083
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.83 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump"
length = 0.5
loop = true
step = 0.083
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.415 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 3, 2 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "run"
loop = true
step = 0.083
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.913 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 7, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 7 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 7.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.564706, 0.12549, 0.788235, 1 )
color_ramp = SubResource( 3 )

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 3
frame = 1

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump = SubResource( 9 )
anims/run = SubResource( 8 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 5 )

[node name="player_camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 2 )

[node name="raycast" type="RayCast2D" parent="."]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2
collide_with_areas = true

[node name="phase_sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="phase_particles" type="Particles2D" parent="."]
emitting = false
amount = 50
randomness = 1.0
local_coords = false
process_material = SubResource( 4 )

[node name="shockwave" parent="." instance=ExtResource( 5 )]
speed = 3.0
acceleration = 5.0
distortion_strength = 0.08
